Update TOC and Move internationalization to i18n

--- a/src/docs/i18n.md
+++ b/src/docs/i18n.md
@@ -1,5 +1,5 @@
 ---
-title: Internationalization
+title: i18n
 ---
 
 RSA CLI supports i18n ([#5](https://github.com/MrWillCom/rsa-cli/issues/5)), so you can choose your most familiar language. The default language is `en-US`.
